# tauri-mod-updater

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  README.md  bun.lockb  index.html  jsconfig.json  next.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: updater-endpoint.json
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  utilities.rs
src/components/Home/: index.tsx  styles.module.scss
src/components/LogPanel/: index.js  index.tsx  styles.module.scss
src/components/Settings/: constants.ts  index.tsx  styles.module.scss
src/components/common/LinearProgressWithLabel/: index.js  index.tsx  styles.module.scss
src/components/common/TitleBar/: index.js  index.tsx  styles.module.scss
src/components/common/TitleBar/Menu/: index.js  index.tsx  styles.module.scss  types.ts
src/context/: LogContext.js  index.tsx  types.ts
src/context/AppState/: constants.ts  index.tsx  types.ts
src/context/LogContext/: constants.tsx  index.tsx  types.ts
src/pages/: _app.js  index.js  style.module.scss
src/pages/home/: index.js  style.module.scss
src/services/: command.service.ts  file.service.ts  git.service.ts  state.service.ts
src/styles/: global.scss
