[package]
name = "mod-updater"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
whoami = "*"
thiserror = "*"
git2 = "0.15.0"
serde_json = "1.0"
html_parser = "0.6.3"
tauri-plugin-window-state = "0.1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all", "updater"] }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
